--- a/src/frontend/css/login.css
+++ b/src/frontend/css/login.css
@@ -1,36 +1,40 @@
+/* <<<< ==== CCS DA PÁGINA DE LOGIN ==== >>>>> */
+
+
+
 /* Importa a fonte utilizada */
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap');
 
 /* Estiliza o corpo da pagina, alterando inclusive a fonte */
-body{
+body {
     margin: 0;
     font-family: 'Noto-Sans', sans-serif;
     height: 100vh;
     overflow: hidden;
-    
+
 }
 
 /* Estiliza todos os elementos do documento */
-*{
-    padding:0;
-    margin:0;
+* {
+    padding: 0;
+    margin: 0;
     text-decoration: none;
     list-style: none;
     box-sizing: border-box;
 }
 
 /* Estiliza a divisória principal do login */
-.login{
+.login {
     width: 100vw;
     height: 100vh;
-    background-color:rgb(255, 255, 255);
+    background-color: rgb(255, 255, 255);
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 /* Estiliza a parte esquerda do login */
-.loginEsquerda{
+.loginEsquerda {
     width: 50vw;
     height: 100vh;
     margin-left: 15%;
@@ -38,25 +42,25 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin-bottom:5%;
+    margin-bottom: 5%;
 }
 
 /* Estiliza o texto dentro da divisória esquerda de login */
-.loginEsquerda > h1 {
+.loginEsquerda>h1 {
     font-size: 3vw;
     margin-top: 10%;
     color: seagreen;
 }
 
 /* Estiliza a imagem logo da mrv */
-.imagemLoginEsquerda{
-    width:25vw;
+.imagemLoginEsquerda {
+    width: 25vw;
     margin-left: -40%;
     margin-bottom: -10%;
 }
 
 /* Estiliza a parte direita da pagina de login */
-.loginDireita{
+.loginDireita {
     width: 50vw;
     height: 100vh;
     display: flex;
@@ -66,7 +70,7 @@ body{
 }
 
 /* Estiliza o card de login */
-.cardLogin{
+.cardLogin {
     width: 60%;
     display: flex;
     justify-content: center;
@@ -74,20 +78,20 @@ body{
     flex-direction: column;
     padding: 30px 35px;
     /* background: linear-gradient(180deg, seagreen 100%, white 0%); */
-    background-image: linear-gradient( rgba(0, 107, 63, 0.9), rgb(41, 161, 105));
+    background-image: linear-gradient(rgba(0, 107, 63, 0.9), rgb(41, 161, 105));
     border-radius: 20px;
     box-shadow: aliceblue
-} 
+}
 
 /* Estiliza o texto dentro do card de login */
-.cardLogin > h1 {
+.cardLogin>h1 {
     color: #ff7f50;
     font-weight: 800;
     margin: 0;
 }
 
 /* Estiliza as divisórias de usuario e senha */
-.campoDeTexto{
+.campoDeTexto {
     width: 100;
     display: flex;
     flex-direction: column;
@@ -97,7 +101,7 @@ body{
 }
 
 /* Estiliza os inputs de usuário e senha */
-.campoDeTexto > input{
+.campoDeTexto>input {
     width: 100%;
     border: none;
     border-radius: 10px;
@@ -108,22 +112,23 @@ body{
     box-shadow: coral;
     outline: none;
     box-sizing: border-box;
-} 
+}
 
 /* Estiliza os textos de label dos inputs de usuario e senha */
-.campoDeTexto > label {
+.campoDeTexto>label {
     color: aliceblue;
     margin-bottom: 10px;
 }
+
 /* Estiliza o botão de login */
 
 .text-danger {
-    background-color: aliceblue; 
+    background-color: aliceblue;
     padding: 15px;
     border-radius: 5px;
 }
 
-.botaoLogin{
+.botaoLogin {
     width: 60%;
     padding: 16px 0px;
     margin: 25px;
@@ -137,49 +142,50 @@ body{
 }
 
 /* Adapta o tamanho do card para devices com largura menor que 950px */
-@media only screen and (max-widht: 950px){
-    .cardLogin{
+@media only screen and (max-widht: 950px) {
+    .cardLogin {
         width: 60%;
     }
 }
 
 /* Adapta o tamanho do card para devices com largura menor que 60% */
-@media only screen and (max-widht: 60%){
-    .login{
+@media only screen and (max-widht: 60%) {
+    .login {
         flex-direction: column;
     }
-    .loginEsquerda > h1{
+
+    .loginEsquerda>h1 {
         display: none;
     }
 
-    .loginEsquerda{
+    .loginEsquerda {
         width: 100%;
         height: auto;
     }
 
-    .loginDireita{
+    .loginDireita {
         width: 100%;
         height: auto;
     }
 
-    .imagemLoginEsquerda{
+    .imagemLoginEsquerda {
         width: 50vh;
     }
 
 }
 
-@media (max-width:940px){
+@media (max-width:940px) {
 
-    .cardLogin{
-        width:80%;
+    .cardLogin {
+        width: 80%;
     }
+}
+
+
+@media (max-width:700px) {
+
+    .cardLogin {
+        width: 110%;
+        margin-right: 20px;
     }
-
-
-    @media (max-width:700px){
-
-        .cardLogin{
-            width:110%;
-            margin-right: 20px;
-        }
-        }
+}
