--- a/src/frontend/css/adminServicos.css
+++ b/src/frontend/css/adminServicos.css
@@ -1,3 +1,5 @@
+/* <<<< ==== CCS DA PÁGINA DE ADMIN DOS SERVIÇOS ==== >>>>> */
+
 body {
     background-color: white;
     overflow-x: hidden;
@@ -138,5 +140,3 @@ table img {
 #servicos:hover {
     background-color: #00000000;
 }
-
-
