--- a/src/frontend/css/home.css
+++ b/src/frontend/css/home.css
@@ -1,18 +1,24 @@
+/* <<<< ==== CCS DA PÁGINA INICIAL ==== >>>>> */
+
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
+
 /* Desabilita o scroll no body */
-body{
+body {
     height: 100%;
     overflow: hidden;
 }
+
 /* Define detalhes para todos os elementos */
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
+
 /* Estiliza o conteúdo dentro de section */
-section{
+section {
     position: relative;
     width: 100%;
     min-height: 100vh;
@@ -25,7 +31,7 @@ section{
 }
 
 /* Estiliza o círculo que fica no canto inferior direito */
-.circle{
+.circle {
     position: absolute;
     top: 0;
     left: 0;
@@ -36,36 +42,41 @@ section{
 }
 
 /* Define o display dos elementos que ficarão dentro de 'content' */
-.content{
+.content {
     position: relative;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
+
 /* Define propriedades do texto dentro de content */
-.content .text{
+.content .text {
     position: relative;
     max-width: 600px;
     margin-right: 30px;
     margin-bottom: 150px;
 }
-.content .text h2{
+
+.content .text h2 {
     color: #fff;
     font-size: 3em;
     margin-bottom: 10px;
     line-height: 2.5em;
     font-weight: 700;
 }
-.content .text h2 span{
+
+.content .text h2 span {
     font-size: 3.5em;
     color: #04844B;
 }
-.content .text p{
+
+.content .text p {
     color: rgb(0, 0, 0);
-    
+
 }
-.content .text a{
+
+.content .text a {
     display: inline-block;
     margin-top: 50px;
     padding: 10px 25px;
@@ -77,12 +88,13 @@ section{
     border-radius: 40px;
     transition: 0.3s ease-in-out;
 }
-.content .text a:hover{
+
+.content .text a:hover {
     transform: translateY(-10px);
 }
 
 /* Define propriedades do ícones */
-.icons{
+.icons {
     position: absolute;
     bottom: 40px;
     left: 100px;
@@ -90,10 +102,12 @@ section{
     justify-content: center;
     align-items: center;
 }
-.icons li{
+
+.icons li {
     list-style: none;
 }
-.icons li a{
+
+.icons li a {
     display: inline-block;
     margin-left: 45px;
     background: #222;
@@ -103,27 +117,31 @@ section{
     justify-content: center;
     align-items: center;
     border-radius: 50%;
-    transition:  0.3s ease-in-out;
+    transition: 0.3s ease-in-out;
 }
-.icons li a:hover{
+
+.icons li a:hover {
     background: #e51e2a;
     transform: translateY(-10px);
 }
-.icons li a img{
+
+.icons li a img {
     filter: invert(1);
     transform: scale(0.5);
 }
 
 /* Define propriedades das imagens */
-.boxImg{
-    position:relative;
+.boxImg {
+    position: relative;
     right: 0;
     left: -50px;
     bottom: 5px;
 }
-.boxImg img{
+
+.boxImg img {
     width: 222px;
 }
-.boxImg .img1{
+
+.boxImg .img1 {
     transform: rotate(-0deg)
 }
