--- a/src/frontend/css/pageCadastro.css
+++ b/src/frontend/css/pageCadastro.css
@@ -1,7 +1,10 @@
+/* <<<< ==== CCS DA PÁGINA DE CADASTRO ==== >>>>> */
+
+
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap');
 
-/* Escolha da fonte */ 
-*{
+/* Escolha da fonte */
+* {
   margin: 0;
   padding: 0;
   outline: none;
@@ -9,64 +12,66 @@
 }
 
 /* Classe relativa ao corpo e a centralização dos itens, como também a escolha da cor de fundo */
-body{
+body {
   display: flex;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
   overflow: hidden;
-  background-image: linear-gradient(to bottom, rgba(0, 107, 63, 0.9), rgba(7, 157, 86, 1));;
+  background-image: linear-gradient(to bottom, rgba(0, 107, 63, 0.9), rgba(7, 157, 86, 1));
+  ;
 }
 
 /*Escolha das cores*/
-::selection{
+::selection {
   color: #fff;
   background: #00cc00;
 }
 
-/*Serve para posicionar e dimensionar o container */ 
-.container{
+/*Serve para posicionar e dimensionar o container */
+.container {
   width: 330px;
   background: #fff;
   text-align: center;
   border-radius: 5px;
   padding: 15px 35px 10px 35px;
 }
+
 /*Serve para escolher o tamanho do cabeçalho */
-.container header{
+.container header {
   font-size: 35px;
   font-weight: 600;
   margin: 0 0 30px 0;
 }
 
 /* Proibe o scroll down na parte exterior do form */
-.container .form-outer{
+.container .form-outer {
   width: 80%;
   overflow: hidden;
 }
 
 /* Define o tamanho horizontal da página em 400% para caber todas as 4 etapas do form (agora só tem 3) */
-.container .form-outer form{
+.container .form-outer form {
   display: flex;
   width: 400%;
 }
 
 /* Define a transição de etapa para a outra */
-.form-outer form .page{
+.form-outer form .page {
   width: 25%;
 
   transition: margin-left 0.3s ease-in-out;
 }
 
 /* Estiliza o título da página */
-.form-outer form .page .title{
+.form-outer form .page .title {
   text-align: left;
   font-size: 25px;
   font-weight: 500;
 }
 
 /* Estiliza os campos das páginas */
-.form-outer form .page .field{
+.form-outer form .page .field {
   width: 330px;
   height: 45px;
   margin: 45px 0;
@@ -75,51 +80,54 @@ body{
 }
 
 /* Estiliza os labels dos campos */
-form .page .field .label{
+form .page .field .label {
   position: absolute;
   top: -30px;
   font-weight: 500;
 }
 
 /* Estiliza os inputs */
-form .page .field input{
+form .page .field input {
   height: 100%;
   width: 60%;
   border: 1px solid lightgrey;
   border-radius: 5px;
   padding-left: 15px;
   font-size: 18px;
-  
+
 }
 
 /* Estiliza os selects */
-form .page .field select{
+form .page .field select {
   width: 100%;
   padding-left: 10px;
   font-size: 17px;
   font-weight: 500;
 }
-.btnSair{
+
+.btnSair {
   align-items: center;
-  background-color:none;
+  background-color: none;
   appearance: none;
-  outline:none;
-  border:none;
+  outline: none;
+  border: none;
   background: none;
   margin-left: 90%;
-  border:solid rgb(46, 44, 44);
+  border: solid rgb(46, 44, 44);
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 80%;
   border-width: 1px;
 }
-.btnSair span{
-color:red;
-size:120%;
+
+.btnSair span {
+  color: red;
+  size: 120%;
 }
+
 /* Estiliza os botões */
-form .page .field button{
+form .page .field button {
   width: 60%;
   height: calc(100% + 5px);
   border: none;
@@ -136,39 +144,45 @@ form .page .field button{
 }
 
 /* Diversas definições sobre os botões */
-form .page .field button:hover{
+form .page .field button:hover {
   background: #000;
 }
-form .page .btns button{
-  margin-top: -20px!important;
+
+form .page .btns button {
+  margin-top: -20px !important;
 }
-form .page .btns button.prev{
+
+form .page .btns button.prev {
   margin-right: 3px;
   font-size: 17px;
 }
-form .page .btns button.next{
+
+form .page .btns button.next {
   margin-left: 3px;
 }
 
 /* Diversas definições sobre a progress bar */
-.container .progress-bar{
+.container .progress-bar {
   display: flex;
   margin: 40px 0;
   user-select: none;
 }
-.container .progress-bar .step{
+
+.container .progress-bar .step {
   text-align: center;
   width: 100%;
   position: relative;
 }
-.container .progress-bar .step p{
+
+.container .progress-bar .step p {
   font-weight: 500;
   font-size: 18px;
   color: #000;
   margin-bottom: 8px;
 }
+
 /*Serve para adicionar cor e tamanho as bolinhas que representam a linha de progresso */
-.progress-bar .step .bullet{
+.progress-bar .step .bullet {
   height: 25px;
   width: 25px;
   border: 2px solid rgb(0, 0, 0);
@@ -180,24 +194,28 @@ form .page .btns button.next{
   font-size: 17px;
   line-height: 25px;
 }
+
 /*Classe refrente a cor dentro das bolinhas */
-.progress-bar .step .bullet.active{
+.progress-bar .step .bullet.active {
   border-color: #00cc00;
   background: #00cc00;
 }
+
 /*Classe relativa ao posicionamento dos números dentro das bolinhas */
-.progress-bar .step .bullet span{
+.progress-bar .step .bullet span {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
 }
+
 /*Classe responsável por tampar o número ao usuário avançar no formulário */
-.progress-bar .step .bullet.active span{
+.progress-bar .step .bullet.active span {
   display: none;
 }
+
 /*Classe relativa a espessão das linhas entre os números e também das cores */
 .progress-bar .step .bullet:before,
-.progress-bar .step .bullet:after{
+.progress-bar .step .bullet:after {
   position: absolute;
   content: '';
   bottom: 11px;
@@ -208,16 +226,18 @@ form .page .btns button.next{
 }
 
 .progress-bar .step:last-child .bullet:before,
-.progress-bar .step:last-child .bullet:after{
+.progress-bar .step:last-child .bullet:after {
   display: none;
 }
+
 /* Classe responsável pela iteratividade do check */
-.progress-bar .step p.active{
+.progress-bar .step p.active {
   color: #00cc00;
   transition: 0.2s linear;
 }
+
 /*Classe relativa ao check da barra de progresso */
-.progress-bar .step .check{
+.progress-bar .step .check {
   position: absolute;
   left: 50%;
   top: 70%;
@@ -225,13 +245,14 @@ form .page .btns button.next{
   transform: translate(-50%, -50%);
   display: none;
 }
+
 /*Classe responsável pela cor branca do check */
-.progress-bar .step .check.active{
+.progress-bar .step .check.active {
   display: block;
   color: #fff;
 }
 
-.page.slide-page.sumido{
+.page.slide-page.sumido {
 
   margin-left: 50%;
 }
